[package]
name = "brute"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
futures = "0.3"
mysql = { version = "26.0", default-features = false, features = ["minimal", "rustls-tls"] }
redis = { version = "0.32", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
russh = { version = "0.60", default-features = false, features = ["ring", "flate2", "rsa"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
suppaftp = { version = "8.0", default-features = false, features = ["tokio-rustls-ring"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
